[package]
name = "nestify2"
version = "0.0.0"
authors = ["Patrick Unick <storm1surge@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
syn = { version = "2.0.39", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro-error = "1.0.4"